# acm_zzz

./: .gitignore  README.md  foc_tuning_log.md  foc_tuning_report.md  main.py  pyproject.toml  st_main.py  super_config.py  user_config.yaml  waterpump_tuning_log.md  waterpump_tuning_report.md
examples/: __init__.py  basic_simulation.py  foc_simulation.py  foc_waterpump_simulation.py  svpwm_simulation.py
frameworkCodes/c/: ACMSim.h  Makefile  main.c  main_foc_load_test.c  main_foc_test.c  main_switch.c  main_switch.h  main_velocity_test.c  mian_switch.h  pi_math.h  super_config.c  super_config.h  test_rk4.c  typedef.h  utility.c  verify.py
gui/: __init__.py
gui/dearpygui/: __init__.py  app.py  controls.py  main.py  plotting.py  simulation.py
input_motorLibrary/: motor_library.json
src/acmsimpy/: __init__.py
src/acmzzz/: __init__.py
src/acmzzz/control/: __init__.py  controller.py  controller_params.py  foc.py  regulator.py
src/acmzzz/core/: __init__.py  dynamics.py  integrator.py  machine.py  machine_params.py  machine_state.py  transforms.py
src/acmzzz/inverter/: __init__.py  svpwm.py
src/acmzzz/observers/: __init__.py  speed_observer.py
src/acmzzz/utils/: __init__.py  angle.py  tuner.py
tests/: __init__.py  conftest.py  test_angle.py  test_controller.py  test_controller_params.py  test_dynamics.py  test_foc.py  test_import.py  test_integrator.py  test_machine.py  test_machine_params.py  test_machine_state.py  test_regulator.py  test_speed_observer.py  test_svpwm.py  test_transforms.py  test_tuner.py
