[project]
name = "acmzzz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "dearpygui>=2.3",
]

[project.optional-dependencies]
control = [
    "control>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

